--- a/src/app/components/custom-details/custom-details.component.html
+++ b/src/app/components/custom-details/custom-details.component.html
@@ -1,7 +1,9 @@
-<div class="item-details" >
+<div class="item-details">
   <div class="name-rating-container">
     <div class="name">
-      <h5 class="fn-16 dalel-Bold"> {{ ItemDetails?.title }}</h5>
+      <h5 class="fn-16 dalel-Bold">
+         {{ ItemDetails?.title || OrderDetails?.department_title }}
+      </h5>
     </div>
 
     <div class="rating">
@@ -9,7 +11,7 @@
         <div class="rating-container">
           <ion-icon color="secondary" slot="start" name="star"></ion-icon>
           <span class="white-color fn-12 dalel-Regular">{{
-            ItemDetails?.rate
+            ItemDetails?.rate || OrderDetails?.department_rate
           }}</span>
         </div>
       </div>
@@ -17,10 +19,21 @@
   </div>
 
   <div class="address-price-container">
-    <ion-item lines="none" class="address" [ngClass]="isDetailed ? 'details' : ''">
+    <ion-item
+      lines="none"
+      class="address"
+      [ngClass]="isDetailed ? 'details' : ''"
+    >
       <ion-label>
         <p class="fn-14 dalel-Regular dark-black-color">
-           {{ ItemDetails?.city_title }} - {{ ItemDetails?.neighborhood_title }}
+           {{
+            ItemDetails?.city_title || OrderDetails?.department_city_title
+          }}
+          -
+          {{
+            ItemDetails?.neighborhood_title ||
+              OrderDetails?.department_neighborhood_title
+          }}
         </p>
       </ion-label>
       <ion-icon slot="start" name="location-sharp" color="primary"></ion-icon>
@@ -31,7 +44,8 @@
         class="fn-10 dalel-Bold primary-color"
         [ngClass]="currentlangauge == 'ar' ? 'float-left' : 'float-right'"
       >
-         {{ ItemDetails?.price }} {{ 'currency' |translate }}/{{'one night'|translate }}
+         {{ ItemDetails?.price || OrderDetails?.department_price }}
+        {{ "currency" | translate }}/{{ "one night" | translate }}
       </p>
     </div>
   </div>
