--- a/src/app/modules/notifications/notifications.page.html
+++ b/src/app/modules/notifications/notifications.page.html
@@ -5,11 +5,14 @@
   [isMain]="false"
   class="header-height"
 ></app-header>
-<!-- [ngClass]="item.isRead ? 'isRead' : ''" 
- *ngIf="!noNotifications"
--->
 
 <ion-content class="ion-padding">
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  <div *ngIf="noNotifications" class="no-data">
+    <p>{{"no Notifications"|translate}}</p>
+  </div>
   <ion-card class="ion-no-margin">
     <ion-item-sliding *ngFor="let item of notifications">
       <ion-item (click)="openOrederDetails(item.order_id)">
@@ -35,8 +38,4 @@
       </ion-item-options>
     </ion-item-sliding>
   </ion-card>
-
-  <div class="no-notifications" *ngIf="noNotifications  ">
-    <h5>{{'no-notifications'|translate}}</h5>
-  </div>
 </ion-content>
