--- a/src/app/modules/main/main.page.scss
+++ b/src/app/modules/main/main.page.scss
@@ -75,51 +75,60 @@
     bottom: 0 !important;
     background-color: var(--ion-color-primary) !important;
   }
-  .swiper-pagination-bullet-active {
-    background-color: rgba(var(--ion-color-primary), 0.5) !important;
-    height: 10px;
-    width: 30px !important;
-    border-radius: 10px;
-    opacity: 0.5;
-  }
- .swiper-pagination-bullet-active {
-    background-color: var(--ion-color-primary) !important;
-    height: 10px;
-    width: 30px !important;
-    border-radius: 10px;
-    height: 20 !important;
-  }
-  .swiper-pagination {
-    position: absolute;
-    bottom: 10px;
-    right: 0;
-    top: auto !important;
-    text-align: center;
-  }
-  .swiper-pagination swiper-pagination-bullets swiper-pagination-horizontal {
-    height: 20 !important;
-  }
-  .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
-  .swiper-pagination-horizontal.swiper-pagination-bullets
-    .swiper-pagination-bullet {
-    background-color: var(--ion-color-primary) !important;
-    height: 10px;
-    width: 15px;
-    border-radius: 10px;
-  } 
+
+  .swiper-pagination-bullet {
+    height: 10px !important;
+    width: 15px !important;
+    display: inline-block;
+    border-radius: 10px !important;
+    background: var(--ion-color-secondary) !important;
+    opacity: rgb(var(--ion-color-secondary-rgb), 0.55) !important;
+}
+//   .swiper-pagination-bullet-active {
+//     background-color: rgba(var(--ion-color-primary), 0.5) !important;
+//     height: 10px;
+//     width: 30px !important;
+//     border-radius: 10px;
+//     opacity: 0.5;
+//   }
+//  .swiper-pagination-bullet-active {
+//     background-color: var(--ion-color-primary) !important;
+//     height: 10px;
+//     width: 30px !important;
+//     border-radius: 10px;
+//     height: 20 !important;
+//   }
+  // .swiper-pagination {
+  //   position: absolute;
+  //   bottom: 10px;
+  //   right: 0;
+  //   top: auto !important;
+  //   text-align: center;
+  // }
+  // .swiper-pagination swiper-pagination-bullets swiper-pagination-horizontal {
+  //   height: 20 !important;
+  // }
+  // .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
+  // .swiper-pagination-horizontal.swiper-pagination-bullets
+  //   .swiper-pagination-bullet {
+  //   background-color: var(--ion-color-primary) !important;
+  //   height: 10px;
+  //   width: 15px;
+  //   border-radius: 10px;
+  // } 
 
 
-  .swiper-pagination-bullets {
-    top: 37% !important;
-    right: 36px;
-    left: 32px !important;
-    height: fit-content;
-  }
+  // .swiper-pagination-bullets {
+  //   top: 37% !important;
+  //   right: 36px;
+  //   left: 32px !important;
+  //   height: fit-content;
+  // }
 
-  .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
-    height: 21 !important;
-    display: block;
-  }
+  // .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
+  //   height: 21 !important;
+  //   display: block;
+  // }
   img {
     border-radius: 10px;
     height: 160px;
@@ -239,3 +248,14 @@
   //   }
   // }
 }
+// .swiper-pagination-bullet-inactive {
+//   background-color: rgba(var(--ion-color-primary), 0.5) !important;
+// }
+
+// .swiper-pagination-bullet-active {
+//   background-color: var(--ion-color-primary) !important;
+//   height: 10px;
+//   width: 30px !important;
+//   border-radius: 10px;
+//   height: 20 !important;
+// }
