--- a/src/app/modules/settings/settings.page.html
+++ b/src/app/modules/settings/settings.page.html
@@ -5,9 +5,9 @@
   [isMain]="false"
   class="header-height"
 ></app-header>
-<ion-content class="background">
+<ion-content class="background ion-padding">
   <!-- <ion-card class="ion-padding"> -->
-    <div
+  <div
     class="language"
     [ngClass]="currentlangauge == 'ar' ? 'arabic_padding' : 'english_padding'"
   >
@@ -47,14 +47,15 @@
     >
       <span>{{"change"|translate}}</span>
     </ion-button> -->
-
-    
   </div>
-  <ion-button  class="ion-padding-horizontal" expand="block" routerLink="/tabs/main">
+  <ion-button
+    class="ion-padding-horizontal"
+    expand="block"
+    routerLink="/tabs/main"
+  >
     <span class="auth-btn fn-16 white-color dalel-Bold">
       {{ "change"|translate}}
     </span>
-  </ion-button> 
+  </ion-button>
   <!-- </ion-card> -->
-  
 </ion-content>
