--- a/src/global.scss
+++ b/src/global.scss
@@ -270,3 +270,27 @@ ion-tab-bar {
 .alert-head.sc-ion-alert-ios {
   padding: 0px !important;
 }
+.swiper-pagination-bullet-active {
+  background-color: var(--ion-color-primary) !important;
+  height: 10px;
+  width: 30px !important;
+  border-radius: 10px;
+  height: 20 !important;
+}
+
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets
+  .swiper-pagination-bullet {
+  background-color: var(--ion-color-primary) !important;
+  height: 10px;
+  width: 15px;
+  border-radius: 10px;
+}
+
+.swiper-pagination-bullet-inactive {
+  background-color: rgba(var(--ion-color-primary), 0.5) !important;
+  height: 10px;
+  width: 15px;
+  border-radius: 10px;
+  opacity: 0.5;
+}
