--- a/ios/App/App/public/styles.css
+++ b/ios/App/App/public/styles.css
@@ -2120,6 +2120,26 @@ button.swiper-pagination-bullet {
 :root[dir=ltr] ion-menu::part(container) {
   border-radius: 0px 80px 0px 0px;
 }
+.no-data {
+  text-align: center;
+  margin-top: 30%;
+}
+.no-data p {
+  font-size: 18px;
+  color: var(--ion-color-primary);
+}
+ion-badge {
+  height: 18px;
+  width: 18px;
+  border-radius: 50%;
+  text-align: center;
+}
+ion-badge span {
+  font-size: 10px;
+}
+.badge-color {
+  color: var(--ion-color-white);
+}
 .my-custom-class div#alert-1-msg {
   margin-top: 13px !important;
   color: var(--ion-color-dark-black) !important;
@@ -2277,6 +2297,27 @@ ion-tab-bar ion-tab-button ion-icon {
 }
 .alert-head.sc-ion-alert-ios {
   padding: 0px !important;
+}
+.swiper-pagination-bullet-active {
+  background-color: var(--ion-color-primary) !important;
+  height: 10px;
+  width: 30px !important;
+  border-radius: 10px;
+  height: 20 !important;
+}
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+  background-color: var(--ion-color-primary) !important;
+  height: 10px;
+  width: 15px;
+  border-radius: 10px;
+}
+.swiper-pagination-bullet-inactive {
+  background-color: rgba(var(--ion-color-primary), 0.5) !important;
+  height: 10px;
+  width: 15px;
+  border-radius: 10px;
+  opacity: 0.5;
 }
 
 /*# sourceMappingURL=styles.css.map*/
